--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,14 +1,35 @@
 
 body{
-color: white;
+color: black;
 position: relative;
-background-image: url("https://newevolutiondesigns.com/images/freebies/space-wallpaper-5.jpg");
+background-image: url("https://i.pinimg.com/originals/a7/67/d0/a767d090f220e688e19d2d8e2c4abd3f.jpg"); 
+text-align: center;
 }
 
+
 .para{
-color: lightblue;
+color: black;
 } 
+.content{
+position: absolute;
+z-index: 1;
+top: 100px;  
+}
 
 .yoshi-egg{
-position: relative;
+position: fixed;
+right: 25px; 
+} 
+ 
+.yoshi{
+position: fixed;
+left: 25px; 
+} 
+.navbar{
+position: fixed; 
+width:100%;
+height:100px;
+border:1px; 
+color: white; 
+background-image: url("https://66.media.tumblr.com/1d7b8a369325d832e49ade273bb11ec7/tumblr_nyuh94aDtg1qbgdnxo1_500.gif");
 } 
