--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,6 +2,11 @@
 body {
   font-family: 'Fjalla One', sans-serif;
 }
+*{
+  font-family: 'Lato', sans-serif;
+}
+
+
 
 .fancy {
   transform: translate(-50%, -50%);
