--- a/CSS/index.css
+++ b/CSS/index.css
@@ -7,6 +7,32 @@ body {
 }
 
 
+.modfan{
+display: flex; 
+height: 65px;  
+width:250px; /* or whatever width you want. */
+max-width:250px; /* or whatever width you want. */
+display: inline-block;
+
+
+} 
+
+.title-overlay {
+  background: rgba(0, 0, 0, 0);
+  position: absolute;
+  top: 0px;
+  right: 0;
+  bottom: 0px;
+  left: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.roundit{
+  border-radius: 12px;
+}
 
 .fancy {
   transform: translate(-50%, -50%);
