--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,9 +3,9 @@
 
 .modfan{
 display: flex; 
-height: 65px;  
-width:250px; /* or whatever width you want. */
-max-width:250px; /* or whatever width you want. */
+height: 150px;  
+width:230px; /* or whatever width you want. */
+max-width:230px; /* or whatever width you want. */
 display: inline-block;
 
 
@@ -15,7 +15,7 @@ display: inline-block;
   background: rgba(0, 0, 0, 0);
   position: absolute;
   top: 0px;
-  right: 0;
+  right: 25px;
   bottom: 0px;
   left: 0;
   z-index: 1;
