--- a/CSS/global.css
+++ b/CSS/global.css
@@ -1,11 +1,9 @@
-@import url(https://fonts.googleapis.com/css?family=Fjalla+One);
 
 body {
-    font-family: 'Fjalla One', sans-serif;
     background-color: #209cee;
 }
 
 
 * {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
