--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -1,7 +1,3 @@
-
-
-
-
 .babyLuigi{
     position: absolute;
     width: 100px;
@@ -19,3 +15,26 @@
     position: relative;
     right: 20px;
 }
+
+.title-overlay {
+    background: rgba(0, 0, 0, 0);
+    position: absolute;
+    top: 0px;
+    right: 25px;
+    bottom: 0px;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+.modfan{
+    display: flex; 
+    height: 150px;  
+    width:230px; /* or whatever width you want. */
+    max-width:230px; /* or whatever width you want. */
+    display: inline-block;
+    
+    
+    } 
